UI improvements. / Now the App can add events to the device calendar.

--- a/app/pages/event-filter/event-filter.modal.html
+++ b/app/pages/event-filter/event-filter.modal.html
@@ -21,7 +21,7 @@
     </StackLayout>
     <Button
       class="btn btn-primary btn-rounded-sm"
-      text="¡Volver!"
+      text="Aplicar"
       (tap)="close('talk')">
     </Button>
   </StackLayout>
